--- a/.github/workflows/firebase-hosting-push-ci-cd.yml
+++ b/.github/workflows/firebase-hosting-push-ci-cd.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm ci
 
       - name: Run tests
-        run: npm run test -- --ci
+        run: npm run test
 
       - name: Build project
         run: npm run build
