--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "firebase": "^12.5.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.9.5",
     "tailwindcss": "^4.1.7"
   },
   "devDependencies": {
